Adding in the support for core
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_includes/related-bns.html
+++ b/_includes/related-bns.html
@@ -6,7 +6,7 @@
     {% assign maxRelatedCounter = 0 %}
 
     <ul class="uk-list">
-    {% for doc in site.learn %}
+    {% for doc in site.bns %}
 
     {% assign sameTagCount = 0 %}
     {% assign commonTags = '' %}
