--- a/_layouts/bns.html
+++ b/_layouts/bns.html
@@ -8,24 +8,24 @@ layout: default
 
             <div class="sidebar-fixed-width uk-visible@m">
                 <div class="sidebar-docs uk-position-fixed">
-                    {% for section in site.data.navigation_naming %}
-                    <h5>{{ section.title }}</h5>
-                    <ul class="uk-nav uk-nav-default doc-nav">
-                    {% for doc in section.docs %}
-                      {% assign doc_url = doc | prepend:"/" | append:"/" %}
-                      <!-- {% assign p =  site.docs | where:"url", doc_url | first %} -->
-                      {% for col in site.collections %}
-                        {% for item in col.docs %}
-                            {% if item.url == doc_url %}
-                                 {% assign doc_title = item.title %}
-                             {% else %}
-                               {% comment %}Do nothing{% endcomment %}
-                             {% endif %}
+                    {% for section in site.data.navigation_bns %}
+                        <h5>{{ section.title }}</h5>
+                        <ul class="uk-nav uk-nav-default doc-nav">
+                        {% for doc in section.docs %}
+                            {% assign doc_url = doc | prepend:"/" | append:".html"%}
+                            <!-- {% assign p =  site.docs | where:"url", doc_url | first %} -->
+                            {% for col in site.collections %}
+                              {% for item in col.docs %}
+                                  {% if item.url == doc_url %}
+                                       {% assign doc_title = item.title %}
+                                   {% else %}
+                                     {% comment %}Do nothing{% endcomment %}
+                                   {% endif %}
+                              {% endfor %}
+                            {% endfor %}
+                            <li class="{% if doc_url == page.url %}uk-active{% endif %}"><a href="{{ doc_url }}">{{ doc_title }}</a></li>
                         {% endfor %}
-                      {% endfor %}
-                      <li class="{% if doc_url == page.url %}uk-active{% endif %}"><a href="{{ doc_url }}">{{ doc_title }}</a></li>
-                    {% endfor %}
-                    </ul>
+                        </ul>
                     {% endfor %}
                 </div>
             </div>
@@ -51,7 +51,7 @@ layout: default
 
                     {% include paginate-doc.html %}
 
-                    {% include related-naming.html %}
+                    {% include related-bns.html %}
 
                     {% if site.disqus.shortname %} {% include disqus_comments.html %} {% endif %}
                 </article>
