Adding in Atlas
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -7,4 +7,4 @@
       searchBox: {selector: '#searchBox'}
    };
 </script>
-<script src="https://sitesearch360.com/cdn/sitesearch360-v11.min.js" async></script>
+<script src="https://cdn.sitesearch360.com/sitesearch360-v11.min.js" async></script>
