--- a/_layouts/auth.html
+++ b/_layouts/auth.html
@@ -8,11 +8,14 @@ layout: default
 
             <div class="sidebar-fixed-width uk-visible@m">
                 <div class="sidebar-docs uk-position-fixed">
+                  <!--  -->
                     {% for section in site.data.navigation_auth %}
-                    <h5>{{ section.title }}</h5>
+                    {% if section.title %}
+                         <h5>{{ section.title }}</h5>
+                    {% endif %}
                     <ul class="uk-nav uk-nav-default doc-nav">
                     {% for doc in section.docs %}
-                      {% assign doc_url = doc | prepend:"/" | append:"/" %}
+                      {% assign doc_url = doc | prepend:"/" | append:".html" %}
                       <!-- {% assign p =  site.docs | where:"url", doc_url | first %} -->
                       {% for col in site.collections %}
                         {% for item in col.docs %}
@@ -27,6 +30,7 @@ layout: default
                     {% endfor %}
                     </ul>
                     {% endfor %}
+                  <!--  -->
                 </div>
             </div>
 
