Adding in commenting
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_layouts/auth.html
+++ b/_layouts/auth.html
@@ -58,7 +58,7 @@ layout: default
 
                     {% include related-auth.html %}
 
-                    {% if site.disqus.shortname %} {% include disqus_comments.html %} {% endif %}
+                     {% include discourse.html %} 
                 </article>
 
                 <script>
