--- a/_includes/discourse.html
+++ b/_includes/discourse.html
@@ -2,14 +2,14 @@
 <div id='discourse-comments' class="uk-margin-large-top" ></div>
 
 <script type="text/javascript">
-  var path = {{site.url}}{{page.url}}
   DiscourseEmbed = { discourseUrl: 'https://forum.blockstack.org/',
-                     discourseEmbedUrl:  {{site.url}}{{page.url}} ;
+                     discourseEmbedUrl:  '{{site.url}}{{page.url}}' };
 
   (function() {
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
     d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+    // (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+    (document.getElementsByTagName('title')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
   })();
 </script>
 {% endif %}
