Working on staticman
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_includes/page__comments.html
+++ b/_includes/page__comments.html
@@ -1,5 +1,5 @@
 <form method="POST" action="https://api.staticman.net/v2/entry/moxiegirl/docs.blockstack/master/comments">
-  <input name="options[redirect]" type="hidden" value="http://127.0.0.1:4000/">
+  <input name="options[redirect]" type="hidden" value="{{ site.url }}">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
   <label><input name="fields[name]" type="text">Name</label>
