--- a/_layouts/auth.html
+++ b/_layouts/auth.html
@@ -58,7 +58,7 @@ layout: default
 
                     {% include related-auth.html %}
 
-                     {% include discourse.html %} 
+                     {% include page__comments.html %} 
                 </article>
 
                 <script>
