Updating with latest
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_layouts/auth.html
+++ b/_layouts/auth.html
@@ -58,7 +58,9 @@ layout: default
 
                     {% include related-auth.html %}
 
-                     {% include page__comments.html %} 
+                    {% include comment__form.html %}
+
+                    {% include page__comments.html %}
                 </article>
 
                 <script>
