--- a/_includes/page__comments.html
+++ b/_includes/page__comments.html
@@ -1,9 +1,12 @@
-<form method="POST" action="https://api.staticman.net/v2/entry/moxiegirl/docs.blockstack/master/comments">
-  <input name="options[redirect]" type="hidden" value="{{ site.url }}">
-  <!-- e.g. "2016-01-02-this-is-a-post" -->
-  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
-  <label><input name="fields[name]" type="text">Name</label>
-  <label><input name="fields[email]" type="email">E-mail</label>
-  <label><textarea name="fields[message]"></textarea>Message</label>
-  <button type="submit">Go!</button>
-</form>
+<div class="js-comments">
+  {% assign comments = site.data.comments[page.slug] | sort %}
+  {% for comment in comments %}
+    {% assign avatar = comment[1].avatar %}
+    {% assign email = comment[1].email %}
+    {% assign name = comment[1].name %}
+    {% assign url = comment[1].url %}
+    {% assign date = comment[1].date %}
+    {% assign message = comment[1].message %}
+    {% include comment.html index=forloop.index avatar=avatar email=email name=name url=url date=date message=message %}
+  {% endfor %}
+</div>
