--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,3 +20,7 @@
 
 // Other vendor styles
 @import "syntax-highlighting/github";
+
+// Comment forms
+@import "comments/comments";
+@import "comments/forms";
