--- a/_includes/editme.html
+++ b/_includes/editme.html
@@ -1,1 +1,4 @@
-<a "target="_blank" href="https://github.com/{{site.github_editme_path }}{{ site.branch_url }}/{% unless page.url contains "index.html" %}{% endunless %}{{ page.path }}" class="btn btn-default githubEditButton" role="button"><span data-uk-icon="icon: pencil; ratio: 1.2"></span> Edit this page on Github</a>
+{% assign theCol = site.collections | where: "label", page.collection | first %}
+{% assign filename = page.slug  | append: '.md' %}
+<a "target="_blank" href="https://github.com/{{theCol.basepath}}/{{filename}}{% unless page.url contains "index.html" %}{% endunless %}" class="btn btn-default githubEditButton" role="button">
+  <span data-uk-icon="icon: pencil; ratio: 1.2"></span> Edit this page on Github</a>
