--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="uk-section">
     <div class="uk-container uk-container-xsmall">
-        <article class="uk-article">
+        <article markdown="span" class="uk-article">
 
             <h1 class="uk-article-title">{{ page.title | escape }}</h1>
 
