--- a/_layouts/auth.html
+++ b/_layouts/auth.html
@@ -36,7 +36,7 @@ layout: default
 
             <div class="uk-width-1-1 uk-width-expand@m">
 
-                <article class="uk-article">
+                <article markdown="span" class="uk-article">
 
                     <h1 class="uk-article-title">{{ page.title | escape }}</h1>
 
@@ -47,7 +47,7 @@ layout: default
                         {% include post-meta.html %}
                     </div>
 
-                    <div class="article-content">
+                    <div markdown="span" class="article-content">
                         {{ content }}
                         {% include share.html %}
                     </div>
