--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -5,11 +5,11 @@ layout: default
 <div class="uk-section">
     <div class="uk-container uk-container-xsmall">
 
-        <article class="uk-article">
+        <article markdown="span" class="uk-article">
 
             <h1 class="uk-article-title">{{ page.title | escape }}</h1>
 
-            <div class="article-content">
+            <div markdown="span" class="article-content">
                 {{ content }}
             </div>
 
