Updating site search
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_includes/search-hero.html
+++ b/_includes/search-hero.html
@@ -25,7 +25,7 @@
          orderByRelevanceText: "Relevance" // the text to be shown in order select box to describe 'order by relevance' option
       },
       suggestions: {
-         show: true,  // whether to show search suggestions
+         show: false,  // whether to show search suggestions
          maxQuerySuggestions: 3, // the maximum number of query suggestions
          querySuggestionHeadline: undefined, // the headline of the query suggestions, leave blank if no headline should be shown
          emptyQuerySuggestions: undefined,
