--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -47,7 +47,7 @@ layout: default
                         {% include post-meta.html %}
                     </div>
 
-
+                    <div markdown="span" class="article-content">
                         {{ content }}
                         {% include share.html %}
                     </div>
