--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,13 @@
         {% include footer.html %}
     {% endif %}
 
-    {% include search.html %}
+    {% if page.hero %}
+        {% include search-hero.html %}
+    {% else %}
+        {% include search.html %}
+    {% endif %}
+
+
 
 
     </body>
