--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                 {% include social-networks.html %}
             </div>
         </div> -->
-        <div class="uk-margin-medium uk-text-small copyright">&copy; {{ page.date | date: "%Y" }} {{ site.footer.copyright }}</div>
+        <div class="uk-margin-medium uk-text-small copyright"> Blockstack&reg; and Stacks&trade; are trademarks of Blockstack Public Benefit Corp. &copy; {{ page.date | date: "%Y" }} {{ site.footer.copyright }}</div>
 
     </div>
 </footer>
