UIKit customization for layout
Signed-off-by: moxiegirl <mary@blockstack.com>

--- a/_sass/theme/variables.scss
+++ b/_sass/theme/variables.scss
@@ -18,7 +18,7 @@ $global-border: #c4c7ca;
 
 // Global
 $global-font-family: system-ui;
-$global-link-color: $global-muted-color;
+$global-link-color: #0666b1;
 $global-link-hover-color: $color-hover;
 
 $global-xxlarge-font-size: 1.875rem;;
