--- a/_sass/uikit/components/base.scss
+++ b/_sass/uikit/components/base.scss
@@ -193,7 +193,7 @@ strong { font-weight: $base-strong-font-weight; }
  * Emphasize
  */
 
-em { color: $base-em-color; }
+em { color: $global-secondary-background }
 
 /*
  * Insert
