--- a/_sass/uikit/components/variables.scss
+++ b/_sass/uikit/components/variables.scss
@@ -50,7 +50,7 @@ $global-color:                                   #666 !default;
 $global-emphasis-color:                          #333 !default;
 $global-muted-color:                             #999 !default;
 
-$global-link-color:                              #1e87f0 !default;
+$global-link-color:                              #0666b1 !default;
 $global-link-hover-color:                        #0f6ecd !default;
 
 $global-inverse-color:                           #fff !default;
