--- a/_sass/uikit/mixins-theme.scss
+++ b/_sass/uikit/mixins-theme.scss
@@ -203,7 +203,7 @@
     // Emphasize
     //
 
-    em { color: $inverse-base-em-color; }
+    em { color: $global-secondary-background }
 
     //
     // Headings
