--- a/_sass/uikit/variables-theme.scss
+++ b/_sass/uikit/variables-theme.scss
@@ -84,7 +84,7 @@ $base-body-font-size: $global-font-size !default;
 $global-line-height: 1.5 !default;
 $base-body-line-height: $global-line-height !default;
 $base-body-color: $global-color !default;
-$global-link-color: #1e87f0 !default;
+$global-link-color: #0666b1 !default;
 $base-link-color: $global-link-color !default;
 $base-link-text-decoration: none !default;
 $global-link-hover-color: #0f6ecd !default;
