--- a/_sass/uikit/mixins.scss
+++ b/_sass/uikit/mixins.scss
@@ -142,7 +142,7 @@
     // Emphasize
     //
 
-    em { color: $inverse-base-em-color; }
+    em { color: $global-secondary-background }
 
     //
     // Headings
