--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -12,7 +12,12 @@
     <!-- Written by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ author.name }}</span></span><br> -->
 {% endif %}
 
-<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+<!-- <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
     {% assign date_format = site.date_format | default: "%b %-d, %Y" %}
     {% include editme.html %} <span style="font-family:Wingdings">&#119;</span> {{ page.date | date: date_format }}
+</time> -->
+
+<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+   {% assign date_format = site.date_format | default: "%b %-d, %Y" %}
+   Last update {{ page.date | date: date_format }}
 </time>
