Tweaks from review
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,13 @@
     {% endif %}
 
 
-
-
+    <script>
+    anchors.options = {
+      placement: 'left',
+      visible: 'hover'
+    };
+       anchors.add();
+     </script>
     </body>
 
 </html>
