adding in mining
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: default
             <div class="uk-article-content">
                 {{ content }}
                 {% include share.html %}
+                {% include footer.html %}  
             </div>
 
             <hr class="uk-margin-medium">
