--- a/_layouts/core.html
+++ b/_layouts/core.html
@@ -50,6 +50,7 @@ layout: default
                     <div markdown="span" class="article-content">
                         {{ content }}
                         {% include share.html %}
+                        {% include footer.html %}
                     </div>
 
                     <hr class="uk-margin-medium">
