--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -14,4 +14,5 @@
 
 <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
     {% assign date_format = site.date_format | default: "%b %-d, %Y" %}
+    {{ page.date | date: date_format }}
 </time>
