--- a/_layouts/externalurl.html
+++ b/_layouts/externalurl.html
@@ -1,2 +1,2 @@
 <title>{{page.title}}</title>
-<meta http-equiv="refresh" content="0; url={{ page.redirect }}">
+<meta http-equiv="refresh" content="0; url={{ page.redirect_url }}">
