Zero to DApp Soft Launch - Adding in images for walkthrough - Work in progress commits: copy down from review - Adding in the part 4 after usability testing
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,9 @@
   margin-top: -4px;
   display: block;
 }
+
+
+body > div.uk-lightbox.uk-overflow-hidden.uk-lightbox-panel.uk-open > div.uk-lightbox-toolbar.uk-lightbox-caption.uk-position-bottom.uk-text-center.uk-transition-slide-bottom.uk-transition-opaque
+.lb-data .lb-details {
+    text-align: right;
+}
