--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title | escape }}</title>
+  <!-- <meta name="twitter:image" content="{{ site.url }}/assets/img/touch-icon.png"> -->
   {% seo title=false %}
   <!-- <meta property="og:image" content="{% if site.brand.image contains 'http' %}{{ site.brand.image }}{% else %}{{ site.post_assets | url }}{{ site.brand.image }}{% endif %}"/> -->
   <meta property="og:image" content="{{ "/assets/img/touch-icon.png" | relative_url }}"/>
