Updating with the fix
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_layouts/community.html
+++ b/_layouts/community.html
@@ -8,7 +8,7 @@ layout: default
 
             <div class="sidebar-fixed-width uk-visible@m">
                 <div class="sidebar-docs uk-position-fixed">
-             <h1 class="uk-article-title">Back</h1>
+             <h1 class="uk-article-title">&nbsp;</h1>
                   {{ content | toc_only }}
                 </div>
             </div>
