- Updating with the newest UX language - Modifying emphasis > <em> - Style updates to em and code - Adding wallet security page - Adding new screen caps
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,3 +49,6 @@ body > div.uk-lightbox.uk-overflow-hidden.uk-lightbox-panel.uk-open > div.uk-lig
 }
 
  
+.uk-table th {
+  vertical-align: top !important;
+}
