Updating with latest
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_includes/search-hero.html
+++ b/_includes/search-hero.html
@@ -34,4 +34,5 @@
         }
    };
 </script>
-<script src="https://cdn.sitesearch360.com/sitesearch360-v11.min.js" async></script>
+<script type="module" src="https://cdn.sitesearch360.com/sitesearch360-v12.mjs"></script>
+<script nomodule src="https://cdn.sitesearch360.com/sitesearch360-v12.min.js" async></script>
