Fixing reported problems
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   {% endif %}
   <!-- https://www.bryanbraun.com/anchorjs/  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/2.0.0/anchor.min.js"></script>
-  <script type"text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js">
+  <script type"text/javascript" src="https://code.jquery.com/jquery-latest.min.js">
     switcherTab('uk-tab-instance');
 
     function switcherTab(id){
