--- a/_includes/search.html
+++ b/_includes/search.html
@@ -23,39 +23,39 @@
         selector: '#searchBox'
       },
       results: {
-         embedConfig: undefined, // {'url':undefined,'contentBlock':'.page-content-body'}, // if url is given the page will change to that URL and look for the content block there to insert the results
-         fullScreenConfig: undefined, // {trigger: '#ss360-search-trigger', caption: 'Search this site'}, trigger is the CSS selector to the element that starts the search full screen overlay and searchCaption the caption on the full screen search page
-         caption: 'Found #COUNT# search results for \"#QUERY#\"', // the caption of the search results
-         group: true, // whether results should be grouped if content groups are available
+         embedConfig: undefined, 
+         fullScreenConfig: undefined, 
+         caption: 'Found #COUNT# search results for \"#QUERY#\"', 
+         group: true, 
          filters: undefined,
-         num: 96, // the maximum number of search results to be shown
-         highlightQueryTerms: true, // whether to highlight the query terms in search results
-         moreResultsButton: "Show more results", // HTML for the more results button, all results will be shown if this is null
-         noResultsText: 'Sorry, we have not found any matches for your query.', // the text to show when there are no results
+         num: 96, 
+         highlightQueryTerms: true, 
+         moreResultsButton: "Show more results", 
+         noResultsText: 'Sorry, we have not found any matches for your query.', 
          queryCorrectionText: 'Did you mean "#CORRECTION#"?',
-         searchQueryParamName: 'ss360Query', // the name of the search query parameter
-         linksOpenNewTab: false, // should clicking on the result links open a new tab/window?
-         showSearchBoxLayover: true, //whether to show search box in search result layover
-         moreResultsPagingSize: 12, // the number of new results to show each time the more results button is pressed (max: 24)
-         orderByRelevanceText: "Relevance" // the text to be shown in order select box to describe 'order by relevance' option
+         searchQueryParamName: 'ss360Query', 
+         linksOpenNewTab: false, 
+         showSearchBoxLayover: true, 
+         moreResultsPagingSize: 12, 
+         orderByRelevanceText: "Relevance" 
       },
       suggestions: {
-         show: true,  // whether to show search suggestions
-         maxQuerySuggestions: 3, // the maximum number of query suggestions
-         querySuggestionHeadline: undefined, // the headline of the query suggestions, leave blank if no headline should be shown
+         show: true,  
+         maxQuerySuggestions: 3,
+         querySuggestionHeadline: undefined, 
          emptyQuerySuggestions: undefined,
-         showImages: false, // show images in search suggestions
-         num: 6, // the maximum number of search suggestions to be shown
-         minChars: 3, // minimum number of characters before the suggestions shows, default: 3,
-         maxWidth: 'auto', // the maximum width of the suggest box, default: as wide as the input box, at least 275px
-         throttleTime: 300, // the number of milliseconds before the suggest is triggered after finished input, default: 300ms
-         extraHtml: undefined, // extra HTML code that is shown in each search suggest, you can even show values of datapoints here,
-         highlight: true, // whether matched words should be highlighted, default: true
+         showImages: false, 
+         num: 6, 
+         minChars: 3, 
+         maxWidth: 'auto', 
+         throttleTime: 300,
+         extraHtml: undefined, 
+         highlight: true
        },
-       smart404: { /* The caption of the search results. */
-             caption: 'These links might be useful', /* The string in the title that identifies the page as a 404 page. */
-             identifier: 'Page not found', /* A CSS selector that points to the area in which the alternative links should be shown. */
-             resultSelector: '#ss360-404',
+       smart404: { 
+             caption: 'These links might be useful', 
+             identifier: 'Page not found', 
+             resultSelector: '#ss360-404'
         }
    };
 </script>
